[package]
name = "musicman"
version = "0.1.4"
authors = ["Joseph Chacko <josephchacko2006@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simple cli for playing music in the ~/Music folder"
readme = "README.md"
homepage = "https://github.com/maverik-io"
repository = "https://github.com/maverik-io/musicman"
keywords = ["cli", "music","player"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
colored = "2.1.0"
dirs = "5.0.1"
rodio = "0.19.0"
